--- a/HTML Files/form3.css
+++ b/HTML Files/form3.css
@@ -23,9 +23,9 @@ h2{
 }
 .form-control{
   margin: 10px;
-  padding: 10px;
+  padding: 20px;
   display: flex;
-  flex-direction:column;
+  flex-flow:column wrap;
 }
 input {
   border-radius: 20px;
@@ -49,8 +49,9 @@ span{
 } 
 @media all and (min-width: 600px){
   .form-control {
-    flex-direction: row ;
+    flex-flow: row wrap ;
   }
   label{flex:1;}
   input{ flex:3;}
+  span{flex: 1;}
 }
